--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Submit Essay | Essay Grader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
-<body>
-    hello world
+<body class="p-3">
+    <h1>Essay Grader</h1>
+
+    <form action="/" method="post">
+        <label for="essay">Submit your essay here:</label>
+        <textarea name="essay" id="essay" class="d-block w-100 my-3" rows="10"></textarea>
+        <button role="submit" class="btn btn-primary">Submit</button>
+    </form>
 </body>
 </html>
