--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -13,20 +13,7 @@
     
     <p><strong>Grade: <%= score %>%</strong></p>
 
-    <div class="essay">
-        <% essay.forEach((sentence) => { %>
-            <span>
-                <% sentence.forEach((word) => { %>
-                    <span
-                        <% if (word.problem.length > 0) { %>
-                            data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="<%=word.problem.join(", ") %>"
-                            class="highlight"
-                        <% } %>
-                    ><%=word.value%></span>
-                <% }); %>
-            </span>
-        <% }); %>
-    </div>
+    <%- essay %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script>
