--- a/css/feedback.css
+++ b/css/feedback.css
@@ -1,5 +1,8 @@
 .essay {
     white-space: break-spaces;
+    padding: 1em;
+    border-left: 5px solid lightgray;
+    cursor: pointer;
 }
 
 .highlight {
