--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,20 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Grades | Essay Grader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-</head>
-<body class="p-3">
-    <h1>Essay Grader</h1>
+<%- include("partials/header.ejs") %>
 
-    <h3>View Student's Grades:</h3>
-    <ul>
-        <% grades.forEach((grade) => { %>
-            <li><strong><%= grade.name %></strong>: <%= grade.score %>%</li>
-        <% }) %>
-    </ul>
-</body>
-</html>
+<h2>Admin</h2>
+
+<p>Hello, Mr. Adams.</p>
+
+<h4>View Grades:</h4>
+<ul class="list-group">
+    <% grades.forEach((grade) => { %>
+        <li class="list-group-item p-0 d-flex align-items-center">
+            <div class="flex-grow-1 ms-2"><%= grade.name %>: <%= grade.score %>%</div>
+
+            <form action="/admin" method="post">
+                <input type="hidden" name="id" value="<%= grade.id %>">
+                <button class="btn btn-danger overflow-hidden" type="submit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
+                        <path d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 1 0z"/>
+                    </svg>
+                </button>
+            </form>
+        </li>
+    <% }) %>
+</ul>
+
+<%- include("partials/footer.ejs") %>
