--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -1,34 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feedback | Essay Grader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/feedback.css">
-</head>
-<body class="p-3">
-    <h1>Essay Grader</h1>
-    
-    <h3 class="mt-3">Overall Feedback:</h3>
-    <ul>
-        <li><%= feedback.nastyNoNos %> Nasty No-Nos (-1% each)</li>
-        <li><%= feedback.spelling %> Spelling Errors (-1% each)</li>
-        <li><%= feedback.sameStart %> Sentence Pairs Start With The Same Word (-3% each)</li>
-        <li><%= feedback.prepositionEnd %> Sentences End With A Preposition (-5% each)</li>
-        <li>Word Count: <%= feedback.wordCnt %></li>
-        <li><strong>Final Score: <%= feedback.score %></strong></li>
-    </ul>
+<%- include("partials/header.ejs") %>
 
-    <p>Hover over highlighted words below to receive more detailed feedback.</p>
+<h2>Feedback</h2>
 
-    <%- essay %>
+<ul>
+    <li><%= feedback.nastyNoNos %> Nasty No-Nos (-1% each)</li>
+    <li><%= feedback.spelling %> Spelling Errors (-1% each)</li>
+    <li><%= feedback.sameStart %> Sentence Pairs Start With The Same Word (-3% each)</li>
+    <li><%= feedback.prepositionEnd %> Sentences End With A Preposition (-5% each)</li>
+    <li>Word Count: <%= feedback.wordCnt %></li>
+    <li><strong>Final Score: <%= feedback.score %></strong></li>
+</ul>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script>
-        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-    </script>
-</body>
-</html>
+<p>Hover over highlighted words below to receive more detailed feedback.</p>
+
+<%- essay %>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script>
+    const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+    const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+</script>
+
+<%- include("partials/footer.ejs") %>
